--- a/囚徒困境的博弈论分析.md
+++ b/囚徒困境的博弈论分析.md
@@ -44,7 +44,7 @@ $$
 *证明：* 对于对手的任何策略 $s_j \in \{C, D\}$：
 - 如果 $s_j = C$：$u_i(D, C) = T > R = u_i(C, C)$。
 - 如果 $s_j = D$：$u_i(D, D) = P > S = u_i(C, D)$。
-因此，对于所有 $s_j$，有 $u_i(D, s_j) > u_i(C, s_j)$。$\square$
+因此，对于所有 $s_j$，有 $u_i(D, s_j) > u_i(C, s_j)$。
 
 **推论 1.1：** 策略组合 $(D, D)$ 是**唯一的纯策略纳什均衡（PSNE）**。
 
