--- a/囚徒困境的博弈论分析.md
+++ b/囚徒困境的博弈论分析.md
@@ -151,4 +151,4 @@ $$
 囚徒困境为分析策略性冲突提供了一个基础框架。单次博弈产生一个由严格占优驱动的、唯一的、帕累托无效的均衡。这种紧张关系在重复博弈情境中得到解决，其中未来的影响（高 $\delta$）允许通过可信的惩罚威胁来强制执行合作结果，正如无名氏定理所形式化的那样。扩展到 N 人博弈和连续策略博弈，普遍化了非合作行为在没有明确的协调机制或重复互动的情况下会导致次优社会结果的洞见。本分析严格保持在非合作博弈论中的理性选择和均衡概念的领域内。
 
 > [!NOTE]
-> 以上所有所写并无学术严谨性，也不适用于学习参考，仅是个人用于撰写Markdown文章的练习测试而已，请注意甄别文章中提到的一切学术相关知识，它不一定（非常有可能）是不正确的。
+> 以上所有所写并无学术严谨性，也不适用于学习参考，仅是个人用于撰写Markdown文章的练习测试而已，请注意甄别文章中提到的一切学术相关知识，它可能（非常有可能）是不正确的。
